# openinterstate

./: .env.example  .env.pipeline.example  .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DATA_LICENSE.md  LICENSE  README.md  compose.yaml  datapackage.json  docker-compose.yml  openinterstate-pipeline.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: data_issue.md  docs_or_planning.md
.github/workflows/: ci.yml  release-build.yml
api/: openapi.yaml
crates/derive/: Cargo.toml
crates/derive/src/: canonical_types.rs  interstate_relations.rs  main.rs  routes.rs
crates/derive/src/graph/: component_ids.rs  compress.rs  corridors.rs  directions.rs  mod.rs  relation_corridors.rs
docker/runner/: Dockerfile
docs/: charter.md  data_contract_draft.md  external_blockers.md  licensing_and_attribution.md  naming_glossary.md  program_status.md  release-2026-03-16-pre-fix-summary.csv  release_build.md  release_format.md  release_issues.md  roadmap.md
examples/duckdb/: example_queries.sql
migrations/: 001_bootstrap.sql
openinterstate-core/: Cargo.toml
openinterstate-core/src/: brand_helpers.rs  highway_ref.rs  lib.rs  schema.rs
openinterstate-import/: Cargo.toml
openinterstate-import/src/: exit_poi_linker.rs  importer.rs  main.rs  nsi.rs  parser.rs  reference_routes.rs  workflows.rs
openinterstate-import/src/exit_poi_linker/reachability/: db.rs  mod.rs  osrm.rs  scoring.rs  snap.rs
openinterstate-import/src/graph_builder/: compress.rs  mod.rs
openinterstate-import/src/pbf_importer/: full_extract.rs  helpers.rs  mod.rs  way_pois.rs
pipeline/lib/: common.sh
pipeline/sql/: derive_product.sql
releases/: README.md
schema/: bootstrap.sql  derive.sql
schema/osm2pgsql/: openinterstate.lua
schemas/v0/: README.md  manifest.schema.json
scripts/: export_v1_release.py  validate_repo.sh
tooling/: .eval_baseline.json  eval_exit_coverage.py  export_release.py  extract_interstate_relations.py  validate_repo.sh
(+9 files in other folders)
