[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/derive",
]

[workspace.dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
