[package]
name = "openinterstate-import"
version = "0.1.0"
edition = "2021"

[dependencies]
openinterstate-core = { path = "../openinterstate-core" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
osmpbfreader = "0.17"
sha2 = "0.10"
uuid = { version = "1", features = ["v5"] }
