[package]
name = "openinterstate-derive"
version = "0.1.0"
edition = "2021"

[dependencies]
openinterstate-core = { path = "../core" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v5"] }
